# ink-lings

./: .gitignore  Cargo.toml
exercises/01_intro/intro1/: Cargo.toml  lib.rs
exercises/01_intro/intro2/: Cargo.toml  lib.rs
exercises/02_basics/basics1/: Cargo.toml  lib.rs
exercises/02_basics/basics2/: Cargo.toml  lib.rs
exercises/03_storage/storage1/: Cargo.toml  lib.rs
exercises/03_storage/storage2/: Cargo.toml  lib.rs
exercises/04_events/events1/: Cargo.toml  lib.rs
exercises/04_events/events2/: Cargo.toml  lib.rs
exercises/intro/: .gitignore  Cargo.toml  intro1.rs
info/: exercises.toml
solutions/01_intro/intro1/: Cargo.toml  lib.rs
solutions/01_intro/intro2/: Cargo.toml  lib.rs
solutions/02_basics/basics1/: Cargo.toml  lib.rs
solutions/02_basics/basics2/: Cargo.toml  lib.rs
solutions/03_storage/storage1/: Cargo.toml  lib.rs
solutions/03_storage/storage2/: Cargo.toml  lib.rs
solutions/04_events/events1/: Cargo.toml  lib.rs
solutions/04_events/events2/: Cargo.toml  lib.rs
src/: exercise.rs  main.rs  run.rs  verify.rs  watch.rs
tests/: integration_tests.rs
