[package]
name = "inklings-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
home = "0.5"

[workspace]
members = [
    "exercises/*/*", "exercises/01_intro/intro1",
    "solutions/*/*", "solutions/01_intro/intro1",
]
resolver = "2"

[workspace.dependencies]
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

# scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
