[package]
name = "inklings-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
home = "0.5"

# Integration test dependencies
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
subxt = "0.35"
subxt-signer = "0.35"
sp-core = "31"
sp-keyring = "34"
contract-transcode = "4.0"
serde_json = "1.0"
anyhow = "1.0"

[workspace]
members = ["exercises/*/*", "solutions/*/*"]
resolver = "2"

[workspace.dependencies]
ink = { version = "6.0.0-beta" }

# scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = [
    "derive",
] }
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(ink_abi)',
    'cfg(feature, values("ink-as-dependency"))',
] }
