[package]
name = "intro"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
# ink_primitives = { version = "4.3.0", default-features = false }
# ink_metadata = { version = "4.3.0", default-features = false }
# ink_env = { version = "4.3.0", default-features = false }
# ink_storage = { version = "4.3.0", default-features = false }
ink = { version = "6.0.0-alpha", default-features = false, features = ["unstable-hostfn"] }

# scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = "6.0.0-alpha"

[lib]
path = "./intro1.rs"
# crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    # "scale/std",
    # "scale-info/std",
    # "ink_lang/std",
    # "ink_primitives/std",
    # "ink_metadata/std",
    # "ink_env/std",
    # "ink_storage/std",
]
ink-as-dependency = []
e2e-tests = []
