[package]
name = "intro2-solutions"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { workspace = true }
scale-info = { workspace = true }

[dev-dependencies]
ink_e2e = "6.0.0-alpha"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
